apps/portainer/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portainer
  name: portainer
  namespace: halo
spec:
  ports:
    - targetPort: 9000
      port: 9000
  selector:
    app: portainer
